# vale-rust-subprocess

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
src/: capi.rs  lib.rs
src/sizes/: .gitignore  mod.rs
tests/: capi.rs
usage-from-c/: run_tests.c
